--- a/Main/Application/templates/Application/drop.html
+++ b/Main/Application/templates/Application/drop.html
@@ -9,7 +9,10 @@
             <h1 class="drop__heading">Crop your Question</h1>
             <button class="drop__btn"><img src="{% static 'images/close.png' %}" class="drop__btn--exit"></button>
             <div class="drop__content">
-                <div class="drop__content--cross"></div>
+                <div class="drop__content--cross">
+                    <hr class="drop__content--cross-line1">
+                    <hr class="drop__content--cross-line2">
+                </div>
             </div>
         </div>
     </section>
