--- a/Main/Application/templates/Application/drop.html
+++ b/Main/Application/templates/Application/drop.html
@@ -11,7 +11,17 @@
             <div class="drop__content">
                 <div class="drop__content--cross">
                     <hr class="drop__content--cross-line1">
+                    <div class="drop__content--cross-center"></div>
                     <hr class="drop__content--cross-line2">
+                </div>
+                <div class="drop__content--box">
+                    <form class="drop__content--box-form" action="">
+                        <div class="drop__content--box-form-check">
+                            <input class="drop__content--box-form-check-input" name="crop" type="checkbox">
+                            <label class="drop__content--box-form-check-label" for="crop">I have properly cropped one question only</label>
+                        </div>
+                        <button class="drop__content--box-form-btn" type="submit">Search</button>
+                    </form>
                 </div>
             </div>
         </div>
