--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -19,6 +19,7 @@
                 <div class="search__camera">
                     <img class="search__camera--item" src="{% static 'images/camera.png' %}" alt="">
                     <h5 class="search__camera--text">upload image</h5>
+                    <h3 class="search__camera--button">&#8594;</h3>
                 </div>
             </div>
             <ul class="search__languages">
