--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -55,6 +55,23 @@
             <img class="search-chips--img-item" src="{% static 'images/Group 627.png' %}" alt="">
             <h3 class="search-chips--img-text">5000+ Books cover</h3>
         </div>
+
+        <div class="search-chips--img">
+            <img class="search-chips--img-item" src="{% static 'images/Group 65457.png' %}" alt="">
+            <h3 class="search-chips--img-text">40,000+ doubts cleared</h3>
+        </div>
+        <div class="search-chips--img">
+            <img class="search-chips--img-item" src="{% static 'images/Group 65458.png' %}" alt="">
+            <h3 class="search-chips--img-text">20+ state Boards</h3>
+        </div>
+        <div class="search-chips--img">
+            <img class="search-chips--img-item" src="{% static 'images/Group 65459.png' %}" alt="">
+            <h3 class="search-chips--img-text">1,000,000+ Video Lectures</h3>
+        </div>
+        <div class="search-chips--img">
+            <img class="search-chips--img-item" src="{% static 'images/Group 65460.png' %}" alt="">
+            <h3 class="search-chips--img-text">5000+ Books cover</h3>
+        </div>
     </div>
 
     <section id="section-clear" class="container-fluid">
