--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -16,6 +16,7 @@
             <div class="search">
                 <img class="search__magnify" src="{% static 'images/search.png' %}" alt="">
                 <input class="search__box" type="text" placeholder="Search Questions, Doubts & Images">
+                <input class="search__box1" type="text" placeholder="Search">
                 <div class="search__camera">
                     <img class="search__camera--item" src="{% static 'images/camera.png' %}" alt="">
                     <h5 class="search__camera--text">upload image</h5>
@@ -56,21 +57,21 @@
             <h3 class="search-chips--img-text">5000+ Books cover</h3>
         </div>
 
-        <div class="search-chips--img">
-            <img class="search-chips--img-item" src="{% static 'images/Group 65457.png' %}" alt="">
-            <h3 class="search-chips--img-text">40,000+ doubts cleared</h3>
+        <div class="search-chips--img1">
+            <img class="search-chips--img1-item" src="{% static 'images/Group 65457.png' %}" alt="">
+            <h3 class="search-chips--img1-text">40,000+ doubts cleared</h3>
         </div>
-        <div class="search-chips--img">
-            <img class="search-chips--img-item" src="{% static 'images/Group 65458.png' %}" alt="">
-            <h3 class="search-chips--img-text">20+ state Boards</h3>
+        <div class="search-chips--img1">
+            <img class="search-chips--img1-item" src="{% static 'images/Group 65458.png' %}" alt="">
+            <h3 class="search-chips--img1-text">20+ state Boards</h3>
         </div>
-        <div class="search-chips--img">
-            <img class="search-chips--img-item" src="{% static 'images/Group 65459.png' %}" alt="">
-            <h3 class="search-chips--img-text">1,000,000+ Video Lectures</h3>
+        <div class="search-chips--img1">
+            <img class="search-chips--img1-item" src="{% static 'images/Group 65459.png' %}" alt="">
+            <h3 class="search-chips--img1-text">1,000,000+ Video Lectures</h3>
         </div>
-        <div class="search-chips--img">
-            <img class="search-chips--img-item" src="{% static 'images/Group 65460.png' %}" alt="">
-            <h3 class="search-chips--img-text">5000+ Books cover</h3>
+        <div class="search-chips--img1">
+            <img class="search-chips--img1-item" src="{% static 'images/Group 65460.png' %}" alt="">
+            <h3 class="search-chips--img1-text">5000+ Books cover</h3>
         </div>
     </div>
 
