--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -1343,6 +1343,7 @@ body {
 .explore {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
+  column-gap: 2rem;
   width: 70%;
   position: relative;
   left: 49%;
@@ -1360,6 +1361,25 @@ body {
       font-size: 2.5rem;
       font-family: 'Poppins',sans-serif;
       font-weight: 600; }
+
+@media only screen and (max-width: 50em) {
+  .explore {
+    width: 100%; } }
+
+@media only screen and (max-width: 37.5em) {
+  .explore {
+    grid-template-columns: repeat(3, 1fr);
+    row-gap: 3rem; }
+    .explore__content:nth-child(4) {
+      grid-column: 1 / 3;
+      grid-row: 2 / 3;
+      width: 50%;
+      justify-self: center; }
+    .explore__content:nth-child(5) {
+      grid-column: 2 / 4;
+      grid-row: 2 / 3;
+      width: 50%;
+      justify-self: center; } }
 
 .find {
   box-shadow: 0rem 0rem 1rem rgba(0, 0, 0, 0.3);
@@ -1648,6 +1668,10 @@ body {
           background-color: #DE0B38; }
         .free__content--box-btn:focus, .free__content--box-btn:active {
           outline: none; }
+
+@media only screen and (max-width: 76em) {
+  .free {
+    width: 100%; } }
 
 .get-heading {
   text-align: center;
