--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -229,6 +229,42 @@ body {
       font-size: 2rem;
       width: 250%; }
 
+@media only screen and (max-width: 50em) {
+  .board {
+    width: 100%; } }
+
+@media only screen and (max-width: 37.5em) {
+  .board {
+    grid-template-columns: repeat(3, 1fr); }
+    .board__content:nth-child(4) {
+      grid-column: 1 / 3;
+      margin-top: 4rem;
+      grid-row: 2 / 3; }
+    .board__content:nth-child(5) {
+      grid-column: 2 / 4;
+      margin-top: 4rem;
+      grid-row: 2 / 3;
+      right: 0rem;
+      justify-self: start; } }
+
+@media only screen and (max-width: 30em) {
+  .board {
+    grid-template-columns: repeat(2, 1fr); }
+    .board__content:nth-child(3) {
+      grid-column: 1 / 2;
+      margin-top: 4rem;
+      grid-row: 2 / 3; }
+    .board__content:nth-child(4) {
+      grid-column: 2 / 3;
+      margin-top: 4rem;
+      grid-row: 2 / 3; }
+    .board__content:nth-child(5) {
+      grid-column: 1 / 3;
+      margin-top: 4rem;
+      grid-row: 3 / 4;
+      right: 0rem;
+      justify-self: start; } }
+
 .chap-heading {
   font-size: 3.5rem;
   font-family: 'Poppins',sans-serif;
@@ -1695,6 +1731,8 @@ body {
         padding: .2rem .5rem; } }
 
 @media only screen and (max-width: 56.25em) {
+  .free-para {
+    width: 80%; }
   .free {
     width: 100%; }
     .free__box {
@@ -1708,6 +1746,11 @@ body {
       column-gap: 1.5rem; } }
 
 @media only screen and (max-width: 37.5em) {
+  .free-heading {
+    width: 100%;
+    font-size: 2.5rem; }
+  .free-para {
+    width: 100%; }
   .free {
     width: 90%; }
     .free__content--box {
