--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -383,21 +383,21 @@
         <div class="expert">
         <div class="expert__content">
             <img class="expert-img2" src="{% static 'images/circlepink.png' %}" alt="">
-                <div class="expert__content--box">
+                <div class="expert__content--box t1">
+                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');"></div>
+                    <p class="expert__content--box-para">Coursify enabled me to teach in small groups and have better connection with my students.</p>
+                    <h4 class="expert__content--box-text">-- Shiv Arora , BSc Science</h4>
+                </div>
+                <div class="expert__content--box t2">
                     <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');"></div>
                     <p class="expert__content--box-para">Coursify enabled me to teach in small groups and have better connection with my students.</p>
                     <h4 class="expert__content--box-text">-- Shiv Arora , BSc Science</h4>
                 </div>
                 <img class="expert-img3" src="{% static 'images/circlegreen.png' %}" alt="">
-                <div class="expert__content--box">
-                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');transform:translateX(130%)"></div>
-                    <p class="expert__content--box-para" style="justify-self: end;">Coursify enabled me to teach in small groups and have better connection with my students.</p>
-                    <h4 class="expert__content--box-text" style="justify-self: end;">-- Shiv Arora , BSc Science</h4>
-                </div>
-                <div class="expert__content--box" style="grid-column: 1 / 3;width:50%;justify-self:center;">
-                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');height:17rem;width:17rem"></div>
-                    <p class="expert__content--box-para" style="justify-self: center;font-size:2.5rem;width:80%;">Coursify enabled me to teach in small groups and have better connection with my students.</p>
-                    <h4 class="expert__content--box-text" style="justify-self: center;font-size:2rem;">-- Shiv Arora , BSc Science</h4>
+                <div class="expert__content--box t3" style="grid-column: 1 / 3;width:50%;justify-self:center;column-gap:2rem;">
+                    <div class="expert__content--box-img" style="background-image: url('../../../static/images/group.jpg');height:17rem;width:17rem;"></div>
+                    <p class="expert__content--box-para" style="justify-self: center;font-size:2.5rem;margin-left:4rem;">Coursify enabled me to teach in small groups and have better connection with my students.</p>
+                    <h4 class="expert__content--box-text" style="justify-self: center;font-size:2rem;justify-self: end;">-- Shiv Arora , BSc Science</h4>
                 </div>
                 <img class="expert-img4" src="{% static 'images/circleorange.png' %}" alt="">
             </div>
