--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -1314,45 +1314,93 @@ body {
   height: 15rem;
   right: 2%; }
 
-.expert__content {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  row-gap: 5rem;
-  width: 90%;
-  position: relative;
-  transform: translateX(-50%);
-  left: 50%;
-  column-gap: 20rem; }
-  .expert__content--box {
-    width: fit-content;
+.expert {
+  width: 100%; }
+  .expert__content {
     display: grid;
-    column-gap: 1rem;
-    grid-template-columns: 20% 80%;
-    grid-template-rows: repeat(2, min-content);
-    grid-template-areas: 'img para' 'img text'; }
-    .expert__content--box-img {
-      grid-area: img;
-      height: 12rem;
-      width: 12rem;
-      clip-path: circle(50% at 50% 50%);
-      background-size: cover; }
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 5rem;
+    width: 90%;
+    position: relative;
+    transform: translateX(-50%);
+    left: 50%;
+    column-gap: 15%; }
+    .expert__content .t3 {
+      display: none; }
+    .expert__content--box {
+      width: 100%;
+      display: grid;
+      position: relative;
+      grid-template-columns: 27% 63%;
+      grid-template-rows: repeat(2, max-content);
+      grid-template-areas: 'img para' 'img text'; }
+      .expert__content--box-img {
+        grid-area: img;
+        height: 12rem;
+        width: 12rem;
+        clip-path: circle(50% at 50% 50%);
+        background-size: cover; }
+      .expert__content--box-para {
+        width: 100%;
+        align-self: end;
+        grid-area: para;
+        font-family: 'Roboto',sans-serif;
+        font-size: 2rem;
+        font-weight: 500;
+        color: #4B4B4B; }
+      .expert__content--box-text {
+        font-size: 2rem;
+        width: fit-content;
+        font-family: 'Roboto',sans-serif;
+        grid-area: text;
+        justify-self: start;
+        font-weight: 400;
+        color: #1E4190;
+        margin-left: 3rem;
+        justify-self: end; }
+
+@media only screen and (max-width: 76em) {
+  .expert__content--box {
+    grid-template-columns: 30% 70%; } }
+
+@media only screen and (max-width: 70em) {
+  .expert__content--box {
+    grid-template-columns: 32% 72%; } }
+
+@media only screen and (max-width: 56.25em) {
+  .expert__content--box {
+    grid-template-columns: 35% 72%; } }
+
+@media only screen and (max-width: 50em) {
+  .expert__content {
+    grid-template-columns: 100%;
+    width: 100%;
+    height: fit-content;
+    justify-items: center !important; }
+    .expert__content .t3 {
+      display: none; }
+    .expert__content--box {
+      grid-template-columns: 20% 60%;
+      justify-content: center !important; }
+      .expert__content--box-img {
+        justify-self: center !important; }
+      .expert__content--box-para {
+        justify-self: center !important; } }
+
+@media only screen and (max-width: 37.5em) {
+  .expert__content--box {
+    column-gap: 1rem; }
+  .expert-img3 {
+    transform: translate(-15rem, 25rem); }
+  .expert-img4 {
+    margin-top: 10rem; } }
+
+@media only screen and (max-width: 30em) {
+  .expert__content--box {
+    grid-template-columns: 100%;
+    grid-template-areas: 'img' 'para' 'text'; }
     .expert__content--box-para {
-      width: 65%;
-      align-self: end;
-      grid-area: para;
-      font-family: 'Roboto',sans-serif;
-      font-size: 2rem;
-      font-weight: 500;
-      color: #4B4B4B; }
-    .expert__content--box-text {
-      font-size: 2rem;
-      width: fit-content;
-      font-family: 'Roboto',sans-serif;
-      grid-area: text;
-      justify-self: start;
-      font-weight: 400;
-      color: #1E4190;
-      margin-left: 3rem; }
+      text-align: center; } }
 
 .explore-heading {
   text-align: center;
@@ -3897,8 +3945,9 @@ nav {
     justify-content: center;
     position: relative;
     left: 50%;
-    transform: translateX(-60%) translateY(-5rem);
-    grid-column: 2 / 3; }
+    transform: translateX(-60%);
+    grid-column: 2 / 3;
+    margin-top: 3%; }
     .say__arrow--1 {
       font-size: 7rem;
       font-family: 'Poppins',sans-serif;
@@ -3928,6 +3977,36 @@ nav {
     outline: none; }
   .say-btn:hover {
     filter: brightness(90%); }
+
+@media only screen and (max-width: 56.25em) {
+  .say {
+    width: 95%; }
+    .say__img {
+      width: 35rem; }
+    .say__content {
+      width: 100%; }
+    .say__arrow {
+      transform: translateX(-50%);
+      margin-top: -2%; } }
+
+@media only screen and (max-width: 37.5em) {
+  .say {
+    grid-template-columns: 100%;
+    position: relative; }
+    .say__img {
+      display: none; }
+    .say__arrow {
+      position: relative;
+      grid-column: 1 / 2;
+      left: 50%;
+      height: fit-content;
+      transform: translateX(-50%);
+      justify-content: start;
+      column-gap: 8rem;
+      width: fit-content;
+      grid-template-columns: repeat(2, max-content); }
+  .say-btn {
+    margin-top: 4rem; } }
 
 .search-heading {
   text-align: center;
