--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -249,7 +249,8 @@ body {
 
 @media only screen and (max-width: 30em) {
   .board {
-    grid-template-columns: repeat(2, 1fr); }
+    grid-template-columns: repeat(2, 1fr);
+    width: 80%; }
     .board__content:nth-child(3) {
       grid-column: 1 / 2;
       margin-top: 4rem;
@@ -595,28 +596,34 @@ body {
     font-size: 2rem; } }
 
 @media only screen and (max-width: 37.5em) {
-  .clear {
-    grid-template-columns: 100%;
-    justify-items: center !important; }
-    .clear__img1 {
-      justify-self: center;
-      width: 40%; }
-    .clear__img2 {
-      transform: rotate(90deg) translateY(-2rem); }
-    .clear__img3 {
-      justify-self: center;
-      width: 40%; }
+  .clear__img1 {
+    width: 20rem;
+    height: 30rem;
+    transform: translateX(3rem); }
+  .clear__img2 {
+    width: 25rem; }
+  .clear__img3 {
+    width: 20rem;
+    height: 30rem;
+    transform: translateX(-6rem); }
   .clear-para {
     width: 80%;
     font-size: 2rem; } }
 
 @media only screen and (max-width: 30em) {
-  .clear__img1 {
-    width: 70%; }
-  .clear__img3 {
-    width: 70%; }
-  .clear-para {
-    width: 100%; } }
+  .clear {
+    margin-left: 2rem; }
+    .clear__img1 {
+      width: 15rem;
+      height: 25rem;
+      transform: translateX(3rem); }
+    .clear__img2 {
+      width: 13rem;
+      height: 7rem; }
+    .clear__img3 {
+      width: 15rem;
+      height: 25rem;
+      transform: translateX(-6rem); } }
 
 .course-heading {
   position: relative;
@@ -1823,10 +1830,7 @@ body {
       width: 90%;
       justify-self: center; }
     .free__content--box-item:nth-child(5) {
-      grid-column: 1 / 3;
-      width: 40% !important;
-      justify-self: center;
-      grid-row: 3 / 4; }
+      display: none; }
     .free__content--box-item {
       width: 90%; } }
 
