--- a/Main/Application/templates/Application/home.html
+++ b/Main/Application/templates/Application/home.html
@@ -5,6 +5,10 @@
     <link rel="stylesheet" href="{% static 'main.css' %}">
 
     <section id="section-search" class="container-fluid">
+        <div class="search__top">
+            <img class="search__top--item" src="{% static 'images/camera.png' %}" alt="">
+            <h5 class="search__top--text">Clear your doubts</h5>
+        </div>
         <img class="search-img1" src="{% static 'images/geomentry.png' %}" alt="">
         <img class="search-img2" src="{% static 'images/geomentry1.png' %}" alt="">
         <img class="search-img3" src="{% static 'images/question.png' %}" alt="">
