--- a/Main/static/main.css
+++ b/Main/static/main.css
@@ -612,16 +612,18 @@ body {
 
 @media only screen and (max-width: 30em) {
   .clear {
-    margin-left: -.5rem; }
+    margin-left: -.5rem;
+    margin-top: 2rem; }
     .clear__img1 {
       width: 14rem;
-      height: 25rem;
+      height: 22rem;
       transform: translateX(3rem); }
     .clear__img2 {
       width: 13rem;
       height: 8rem; }
     .clear__img3 {
-      width: 15rem;
+      width: 14rem;
+      height: 22rem;
       transform: translateX(-4rem); } }
 
 .course-heading {
